--- a/dev/index.html
+++ b/dev/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="pl">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -11,9 +12,22 @@
 
     <title>Kamien Nożyce Papier</title>
 </head>
-<body>
 
-    Witam na Stronie hej
+<body>
+    <div class="backGroundBlur"></div>
+
+    <div class="resultContainer">
+        <div class="playerPoints">0</div>
+        <div class="oponentPoints">1</div>
+    </div>
+    <div class="enemySign">znak przeciwnika</div>
+    <div class="optionsContainer">
+        <div id="rock">Kamien</div>
+        <div id="paper">Papier</div>
+        <div id="scissors">Nożyce</div>
+    </div>
+    <div id="reset">resetuj</div>
 
 </body>
+
 </html>
