Caly css gotowy

--- a/dev/index.html
+++ b/dev/index.html
@@ -14,19 +14,18 @@
 </head>
 
 <body>
-    <div class="backGroundBlur"></div>
 
     <div class="resultContainer">
-        <div class="playerPoints">0</div>
-        <div class="oponentPoints">1</div>
+        <div class="playerPoints">GRACZ &nbsp; - &nbsp; 0</div>
+        <div class="oponentPoints">KOMPUTER &nbsp; - &nbsp; 0</div>
     </div>
-    <div class="enemySign">znak przeciwnika</div>
+    <div class="enemySignContainer"><div id="enemySign"></div></div>
     <div class="optionsContainer">
-        <div id="rock">Kamien</div>
-        <div id="paper">Papier</div>
-        <div id="scissors">Nożyce</div>
+        <div id="rock" class="optionButton"></div>
+        <div id="paper" class="optionButton"></div>
+        <div id="scissors" class="optionButton"></div>
     </div>
-    <div id="reset">resetuj</div>
+    <div id="reset"><div class="reset-text">RESETUJ GRĘ</div></div>
 
 </body>
 
